Update_new_code

--- a/app/views/admin.view/admin_dashboard.pug
+++ b/app/views/admin.view/admin_dashboard.pug
@@ -10,7 +10,7 @@ block content
 
     section(style="padding-top: 112px;")
       // Header
-      header.header(style="background-color: #0d88fd;")
+      header.header(style="background-color: #0d88fd;margin-top: 36px;")
         h1 Admin
       .container
         aside.sidebar
