--- a/app/views/admin.view/admin_dashboard.view/add_dish.pug
+++ b/app/views/admin.view/admin_dashboard.view/add_dish.pug
@@ -14,7 +14,7 @@ block main-content
                 alt="Preview"
               )
               label(for="file-input" style="color: #007bff; font-weight: bold; position: absolute;") + Upload Image
-              input#file-input.d-none(type="file" name="img")
+              input#file-input.d-none(type="file" name="imgdish")
 
             script.
               const inputTag = document.getElementById('file-input');
