--- a/app/views/feedback.view/index.pug
+++ b/app/views/feedback.view/index.pug
@@ -6,8 +6,8 @@ block content
       link(rel="stylesheet" href="/stylesheets/feedback/feedback.css")
 
     header.masthead(style="height: 400px; object-fit: cover;  center/cover no-repeat;")
-      .container
-        .masthead-subheading Welcome to the Restaurant
+      .container.h-100.d-flex.align-items-center.justify-content-center
+        span.text-white.px-3.py-2.fs-1.fw-bold.shadow.bg-dark.bg-opacity-50.rounded Chi tiết nhà hàng
       script(type="text/javascript" src="/javascripts/navBar.js")  
 
     // Danh sách món ăn
