--- a/app/views/home.view/index.pug
+++ b/app/views/home.view/index.pug
@@ -3,7 +3,7 @@ extends ../layout
 block content
   header.masthead(style="height: 400px; object-fit: cover; center/cover no-repeat;")
     .container.h-100.d-flex.align-items-center.justify-content-center
-      span.text-white.px-3.py-2.fs-1.fw-bold.shadow.bg-dark.bg-opacity-50.rounded Món Ăn
+      span.text-white.px-3.py-2.fs-1.fw-bold.shadow.bg-dark.bg-opacity-50.rounded Trang Chủ
     script(type="text/javascript" src="/javascripts/navBar.js")
 
   .container
