--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -13,7 +13,7 @@
 }
 
 .banner-sec {
-  background: url(https://static.pexels.com/photos/33972/pexels-photo.jpg) no-repeat left bottom;
+  background: url("/images/img/about/bandoVN.png") no-repeat left bottom;
   background-size: cover;
   min-height: 500px;
   border-radius: 0 10px 10px 0;
@@ -123,7 +123,7 @@
 }
 
 .banner-sec {
-  background: url(https://static.pexels.com/photos/33972/pexels-photo.jpg) no-repeat left bottom;
+  background: url("/images/img/about/bandoVN.png") no-repeat left bottom;
   background-size: cover;
   min-height: 500px;
   border-radius: 0 10px 10px 0;
