--- a/app/views/partials/header.pug
+++ b/app/views/partials/header.pug
@@ -38,7 +38,7 @@ nav#mainNav.navbar.navbar-expand-lg.navbar-dark.navbar-shrink.fixed-top
             a.nav-link.dropdown-toggle(href='#' id='userDropdown' role='button' data-bs-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
               img.card-img-top(
                 style='width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;'
-                src=User.img_restaurant ? `data:image/jpeg;base64,${User.img_restaurant.toString('base64')}` : "/images/img/about/3.jpg"
+                src=User.avatar ? `data:image/jpeg;base64,${User.avatar.toString('base64')}` : "/images/img/about/3.jpg"
                 alt=User.username
               )
               = User.username
