--- a/app/views/admin.view/admin_dashboard.pug
+++ b/app/views/admin.view/admin_dashboard.pug
@@ -19,7 +19,7 @@ block content
               a(href="/api/v1/auth/signin") Login
             - else
               img.profile-pic(
-                src=User.img_restaurant ? `data:image/jpeg;base64,${User.img_restaurant.toString('base64')}` : "/images/img/about/3.jpg"
+                src=User.avatar ? `data:image/jpeg;base64,${User.avatar.toString('base64')}` : "/images/img/about/3.jpg"
                 alt=User.name
               )
               p.name #{User.username}
